<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/menu_nowplaying" />
        <item
            android:id="@+id/nav_tvshow"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_tvshow" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_on_24dp"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"/>
    </group>


</menu>
