<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.SettingActivity">

    <Switch
        android:id="@+id/daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/daily_reminder"
        android:textSize="15sp"/>

    <Switch
        android:id="@+id/upcoming_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/upcoming_movie_reminder_notification"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/change_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_settings"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:padding="8dp"/>

</LinearLayout>